setup passport-local

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
