--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "node-sass-middleware": "^1.0.1",
     "nodemon": "^2.0.22",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   }
 }
