--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "node-sass-middleware": "^1.0.1",
+    "nodemailer": "^6.9.2",
     "nodemon": "^2.0.22",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
