--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "kue": "^0.11.6",
     "mongoose": "^7.1.0",
     "node-sass-middleware": "^1.0.1",
     "nodemailer": "^6.9.2",
@@ -29,6 +30,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "redis": "^4.6.6"
   }
 }
